--- a/.github/workflows/workflow-generate-website.yml
+++ b/.github/workflows/workflow-generate-website.yml
@@ -7,15 +7,11 @@ on:
         required: false
         default: false
         type: boolean
-      bad_links_fail_build:
+      linkcheck_fail_on_error:
         description: 'a boolean flag that determines if bad links found by the link checker fail fast and stop a complete build'
         required: false
         default: true
         type: boolean
-    secrets:
-      access_token:
-        description: 'the access token to use for commits'
-        required: false
   workflow_dispatch:
     branches:
     - main
@@ -27,12 +23,12 @@ on:
         required: true
         default: false
         type: boolean
-      bad_links_fail_build:
+      linkcheck_fail_on_error:
         description: 'a boolean flag that determines if bad links found by the link checker fail fast and stop a complete build'
         required: false
         default: true
         type: boolean
-      create_issue:
+      linkcheck_create_issue:
         description: 'create new GitHub issue if broken links found'
         required: false
         default: false
@@ -43,26 +39,20 @@ jobs:
     runs-on: ubuntu-20.04
     env:
       BUILD_PATH: ./build
+    permissions:
+      contents: write
     steps:
-    # use this for builds triggered from the UI on protected branches
-    - name: Checkout Latest (using COMMIT_TOKEN)
-      if: github.event_name == 'workflow_dispatch' && github.event.inputs.commit_resources == 'true'
+    # use this for builds triggered from the UI and from workflows on protected branches
+    - id: checkout_latest_workflow
+      name: Checkout Latest
+      if: (github.event_name == 'workflow_dispatch' && github.event.inputs.commit_resources == 'true') || (github.event_name == 'push' && inputs.commit_resources == true)
       uses: actions/checkout@f43a0e5ff2bd294095638e18286ca9a3d1956744
       with:
-        token: ${{ secrets.COMMIT_TOKEN }}
+        token: ${{ secrets.GITHUB_TOKEN  }}
         submodules: recursive
-      id: checkout_latest_workflow
-    # use this for builds triggered from other workflows on protected branches
-    - name: Checkout Latest (using access_token)
-      if: github.event_name == 'push' && inputs.commit_resources == true
-      uses: actions/checkout@f43a0e5ff2bd294095638e18286ca9a3d1956744
-      with:
-        token: ${{ secrets.access_token }}
-        submodules: recursive
-      id: checkout_latest_push
     # use this for overything else (i.e., pull requests) where publication is not needed
     - name: Checkout Latest
-      if: steps.checkout_latest_workflow.conclusion == 'skipped' && steps.checkout_latest_push.conclusion == 'skipped'
+      if: steps.checkout_latest_workflow.conclusion == 'skipped'
       uses: actions/checkout@f43a0e5ff2bd294095638e18286ca9a3d1956744
       with:
         submodules: recursive
@@ -75,7 +65,7 @@ jobs:
     - name: Read .env
       id: hugo-version
       run: |
-        . ./.env
+        . .github/workflows/config/.env
         echo "HUGO_VERSION=${HUGO_VERSION}" >> "${GITHUB_OUTPUT}"
     - name: Setup Hugo
       uses: peaceiris/actions-hugo@v2
@@ -85,7 +75,7 @@ jobs:
     - name: Set up NodeJS
       uses: actions/setup-node@5e21ff4d9bc1a8cf6de233a3057d20ec6b3fb69d
       with:
-        node-version-file: 'build/.nvmrc'
+        node-version-file: '.github/workflows/config/.nvmrc'
         cache: 'npm'
         cache-dependency-path: package-lock.json
     - name: Setup Dependencies
@@ -118,50 +108,51 @@ jobs:
       run: |
         zip ${{ runner.temp }}/metaschema-website.zip -r public/
       working-directory: ${{ github.workspace }}/website
-    - uses: actions/upload-artifact@0b7f8abb1508181956e8e162db84b466c27e18ce
+    - name: Upload generated site
+      uses: actions/upload-artifact@0b7f8abb1508181956e8e162db84b466c27e18ce
       with:
         name: website
         path: |
           ${{ runner.temp }}/metaschema-website.zip
         retention-days: 5
-    - name: Link Checker
-      id: linkchecker
+    - id: linkchecker
+      name: Link Checker
       uses: lycheeverse/lychee-action@ec3ed119d4f44ad2673a7232460dc7dff59d2421
       with:
-        args: --exclude-file ./build/config/.lycheeignore --verbose --no-progress --accept 200,206,429 './website/public/**/*.html' --remap "https://pages.nist.gov/metaschema/ file://${GITHUB_WORKSPACE}/website/public/" --exclude-mail
+        args: --exclude-file .github/workflows/config/.lycheeignore --verbose --no-progress --accept 200,206,429 './website/public/**/*.html' --remap "https://pages.nist.gov/vulntology/ file://${GITHUB_WORKSPACE}/website/public/" --exclude-mail
         format: markdown
         output: html-link-report.md
+        debug: true
+        fail: true
       env:
         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-    - uses: actions/upload-artifact@0b7f8abb1508181956e8e162db84b466c27e18ce
+      continue-on-error: true
+    - name: Upload link check report
+      uses: actions/upload-artifact@0b7f8abb1508181956e8e162db84b466c27e18ce
       with:
         name: html-link-report
         path: html-link-report.md
         retention-days: 5
-    - uses: actions/github-script@d7906e4ad0b1822421a7e6a35d5ca353c962f410
-      if: steps.linkchecker.outputs.exit_code != 0
+    - name: Create issue if bad links detected
+      if: ${{ !cancelled() && env.lychee_exit_code != 0 && inputs.linkcheck_create_issue }}
+      uses: peter-evans/create-issue-from-file@433e51abf769039ee20ba1293a088ca19d573b7f
+      with:
+        title: Scheduled Check of Website Content Found Bad Hyperlinks
+        content-filepath: ./lychee/out.md
+        labels: |
+          bug
+          documentation
+    - name: Fail on link check error
+      if: ${{ !cancelled() && env.lychee_exit_code != 0 && (github.event.inputs.linkcheck_fail_on_error == 'true' || inputs.linkcheck_fail_on_error == true) }}
+      uses: actions/github-script@d7906e4ad0b1822421a7e6a35d5ca353c962f410
       with:
         script: |
           core.setFailed('Link checker detected broken or invalid links, read attached report.')
-    - uses: actions/github-script@d7906e4ad0b1822421a7e6a35d5ca353c962f410
-      if: steps.linkchecker.outputs.exit_code != 0 && (github.event.inputs.bad_links_fail_build == 'true' || inputs.bad_links_fail_build == true)
-      with:
-        script: |
-          core.setFailed('Link checker detected broken or invalid links, read attached report.')
-    - name: Deploy Website (using access_token)
+    - name: Deploy Website
       uses: peaceiris/actions-gh-pages@373f7f263a76c20808c831209c920827a82a2847
-      if: github.event_name == 'push' && inputs.commit_resources == true && github.ref_name == 'main'
+      if: github.ref_name == 'main' && ((github.event_name == 'push' && inputs.commit_resources == true) || (github.event_name == 'workflow_dispatch' && github.event.inputs.commit_resources == 'true'))
       with:
-        github_token: ${{ secrets.access_token }}
-        enable_jekyll: false
-        publish_dir: ./website/public
-        publish_branch: nist-pages
-        commit_message: Deploying website [ci deploy skip]
-    - name: Deploy Website (using COMMIT_TOKEN)
-      uses: peaceiris/actions-gh-pages@373f7f263a76c20808c831209c920827a82a2847
-      if: github.event_name == 'workflow_dispatch' && github.event.inputs.commit_resources == 'true' && github.ref_name == 'main'
-      with:
-        github_token: ${{ secrets.COMMIT_TOKEN }}
+        github_token: ${{ secrets.GITHUB_TOKEN }}
         enable_jekyll: false
         publish_dir: ./website/public
         publish_branch: nist-pages
