Updated label action to use PAT.

--- a/.github/workflows/labels.yml
+++ b/.github/workflows/labels.yml
@@ -7,6 +7,8 @@ on:
     paths:
       - '.github/labels.json'
 name: Create Default Labels
+permissions:
+  issues: write
 jobs:
   labels:
     name: DefaultLabelsActions
@@ -15,4 +17,4 @@ jobs:
       - uses: actions/checkout@93ea575cb5d8a053eaa0ac8fa3b40d7e05a33cc8
       - uses: lannonbr/issue-label-manager-action@7890981d0e8f2922211a7fe2c391c53cb3037cb4
         env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          GITHUB_TOKEN: ${{ secrets.GH_TOKEN }}
