--- a/.github/workflows/link-check.yml
+++ b/.github/workflows/link-check.yml
@@ -14,7 +14,7 @@ on:
       markdownLinkCheckConfig:
         description: 'the path to the markdown link check config file'
         required: false
-        default: 'build/config/.markdown-link-check/config.json'
+        default: '.github/workflows/config/.markdown-link-check/config.json'
         type: string
       site_git_ref:
         description: 'git ref, a SHA commit or branch or tag, for the published HTML content'
@@ -37,7 +37,7 @@ jobs:
     if: github.event_name != 'workflow_dispatch'
     with:
       ignorePattern: '^website/'
-      markdownLinkCheckConfig: 'build/config/.markdown-link-check/config.json'
+      markdownLinkCheckConfig: '.github/workflows/config/.markdown-link-check/config.json'
       linkcheck_create_issue: true
   schedule-validate-repo-markdown-links-debug:
     uses: ./.github/workflows/workflow-validate-repo-markdown.yml
